k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: task-manager

spec:
  replicas: 1

  selector:
    matchLabels:
      app: task-manager

  template:
    metadata:
      labels:
        app: task-manager

    spec:
      containers:
        - name: task-manager
          image: task-manager-app:v1
          imagePullPolicy: Never

          ports:
            - containerPort: 8080

          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 5
            failureThreshold: 24

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
