k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: task-manager-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: taskmanager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-manager-service
                port:
                  number: 8080
